wordpress/network-policy-wordpress-analytics-exporter-allow-ingress-from-monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-analytics-exporter-allow-ingress-from-monitoring
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress-analytics-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090
